--- a/Client/chat-app-client/src/styles/custom.css
+++ b/Client/chat-app-client/src/styles/custom.css
@@ -14,40 +14,120 @@
 }
 
 .chat-selector-wrapper {
-  background-color: pink;
-  flex: 2;
+  background-color: rgb(180, 79, 94);
+  min-width: 100px;
+  max-width: 300px;
+  width: 30%;
   display: flex;
   flex-direction: column;
 }
 
 .chat-box-wrapper {
-  background-color: blue;
+  background-color: rgb(161, 37, 75);
   flex: 8;
-  height: 450px;
+  height: 100%;
   padding-bottom: 4px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
 }
 
 .chat-box-inside-wrapper {
   overflow-y: auto;
-  height: 400px;
+  height: 528px;
   padding: "5px 5px 5px 5px";
   margin-bottom: auto;
+}
+
+.chat-selector-inner-wrapper {
+  display: flex;
+  flex-direction: row;
+  background-color: rgb(73, 73, 73);
+  margin-top: 5px;
+  margin-right: 5px;
+  border: none;
+}
+
+.button-inner-header,
+.button-inner-content {
+  display: flex;
+  color: white;
+}
+
+.button-inner-header {
+  font-size: 15px;
+}
+
+.chat-selector-button {
+  height: 50px;
+  background-color: rgb(73, 73, 73);
+  flex: 8;
+  border: none;
+}
+
+.image-wrapper {
+  flex: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.chat-selector-button-inner {
+  display: flex;
+  flex-direction: column;
+}
+
+.chat-selector-image {
+  width: 30px;
+  height: 30px;
+  border-radius: 10px;
+  vertical-align: middle;
+}
+
+.chat-selector-header {
+  text-align: center;
 }
 
 .chat-box-message-form-wrapper {
   display: flex;
   flex-direction: row;
-  background-color: white;
-}
-
-.chat-selector-button {
-  height: 50px;
+  background-color: rgb(161, 37, 75);
 }
 
 .chat-box-message-form-textfield {
   flex: 10;
+  background-color: rgb(221, 131, 120);
+  border-radius: 20px;
 }
 
 .chat-box-message-form-button-textfield {
   flex: 1;
+  height: 55px;
+  color: red;
+}
+
+.message-card-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.card-wrapper {
+  display: flex;
+}
+
+.card-wrapper-sender {
+  display: flex;
+  justify-content: flex-end;
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: red;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  div.chat-selector-wrapper {
+    display: none;
+  }
 }
